--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Profile</title>
 </head>
 <body>
     <nav>
@@ -19,7 +19,11 @@
         </ul>
     </nav>
     <header>
-        <h1><a href="/auth/google">Login with Google</a></h1>
+        <h1>Profile Page</h1>
     </header>
+    <main>
+        <p>Name: <%= user.fullName %></p>
+        <p>Email: <%= user.email %></p>
+    </main>
 </body>
 </html>
