--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">MTHS Schedule Finder</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-5">
+    <a class="navbar-brand" href="/">MTHS Schedule Finder</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/">Homepage</a>
+        <li class="nav-item<% if (page == "home") { %> active<% } %>">
+            <a class="nav-link" href="/">Home</a>
         </li>
         <% if (user) { %>
         <li class="nav-item">
-            <a class="nav-link" href="/profile">Profile</a>
+            <a class="nav-link<% if (page == "account") { %> active<% } %>" href="/account">Account</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/auth/logout">Logout</a>
